kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tfe-devops
  labels:
    app.kubernetes.io/managed-by: kubectl
    environment: dev
    project: tfe-devops
  annotations:
    description: "Namespace principal del TFE DevOps UNIR"
