kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: tfe-devops
  labels:
    app: api-service
    project: tfe-devops
  annotations:
    description: "Servicio que expone el API Service dentro del cluster"
spec:
  selector:
    app: api-service
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
